fixed history overflow problem

--- a/css/gui.css
+++ b/css/gui.css
@@ -50,8 +50,14 @@ body
 }
 	
 #control{
+	height: 10%;
 	text-align: center;
 	padding-top: 15px;
+}
+
+#history {
+	height: 90%;
+	overflow:scroll;	
 }
 
 #history div{
